objects/SaoObj900__c.object
<CustomObject>
    <fields>
        <fullName>F2__c</fullName>
        <description>1111111111</description>
        <label>F2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>f1__c</fullName>
        <description>1111</description>
        <label>f1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>f4__c</fullName>
        <description>111</description>
        <label>f4</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>